# nannou-workshop-trondheim

./: Cargo.toml  README.md  cheat-sheet.md  reading-rust-docfiles.md
basic-app/: Cargo.toml  README.md
basic-app/src/: main.rs
basic-sketch/: Cargo.toml  README.md
basic-sketch/src/: circle-animation-sketch.rs  main.rs
p0/: Cargo.toml  README.md
p0/src/: main.rs
p0/src/suggestion/: p0_f.rs  p0_g.rs  p0_h.rs
p1/: Cargo.toml  README.md
p1/src/: main.rs
p1/src/suggestion/: p1_e.rs  p1_f.rs  p1_g.rs
p2/: Cargo.toml  README.md  main.rs
p2/src/suggestion/: p2_b.rs  p2_c.rs  p2_d.rs  p2_e.rs  p2_f.rs  p2_x.rs
p3/: Cargo.toml
part-01/: Cargo.toml  README.md
part-02/: Cargo.toml
part-02/src/: main.rs
part-03/: Cargo.toml  README.md
src/: main.rs
