[package]
name = "p0"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nannou.workspace = true

[[bin]]
name ="p0_f"
path = "src/suggestion/p0_f.rs"

[[bin]]
name ="p0_g"
path = "src/suggestion/p0_g.rs"

[[bin]]
name ="p0_h"
path = "src/suggestion/p0_h.rs"

