[package]
name = "p1"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nannou.workspace = true


[[bin]]
name = "p1_a"
path = "src/suggestion/p1_a.rs"

[[bin]]
name = "p1_x"
path = "src/suggestion/p1_x.rs"
