[package]
name = "p1"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nannou.workspace = true


[[bin]]
name = "p1_e"
path = "src/suggestion/p1_e.rs"

[[bin]]
name = "p1_f"
path = "src/suggestion/p1_f.rs"

[[bin]]
name = "p1_g"
path = "src/suggestion/p1_g.rs"
